--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -6,37 +6,36 @@
 
 pkgname=popt
 pkgver=1.16
-pkgrel=2
+pkgrel=3
 pkgdesc="A commandline option parser"
-arch=('i686' 'x86_64') 
+arch=('i686' 'x86_64')
 url="http://rpm5.org"
 license=('custom')
 depends=('glibc')
 options=('!libtool')
-source=(http://rpm5.org/files/$pkgname/$pkgname-$pkgver.tar.gz)
+source=(http://rpm5.org/files/${pkgname}/${pkgname}-${pkgver}.tar.gz)
 md5sums=('3743beefa3dd6247a73f8f7a32c14c33')
 
 build() {
-  cd $srcdir/$pkgname-$pkgver
+  cd "${srcdir}/${pkgname}-${pkgver}"
 
-  ./configure --prefix=/usr || return 1
-  make || return 1
+  ./configure --prefix=/usr
+  make
 }
 
 package() {
-  cd $srcdir/$pkgname-$pkgver
-  make DESTDIR=$pkgdir install || return 1
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  make DESTDIR="${pkgdir}" install
 
   # move libs in /lib
   install -Dm755 ${pkgdir}/usr/lib/libpopt.so.0.0.0 \
-    ${pkgdir}/lib/libpopt.so.0.0.0 || return 1
-  
-  rm ${pkgdir}/usr/lib/libpopt.so* || return 1
+    ${pkgdir}/lib/libpopt.so.0.0.0
+
+  rm ${pkgdir}/usr/lib/libpopt.so*
   ln -sf /lib/libpopt.so ${pkgdir}/usr/lib/libpopt.so
   ln -sf libpopt.so.0 ${pkgdir}/lib/libpopt.so
   ln -sf libpopt.so.0.0.0 ${pkgdir}/lib/libpopt.so.0
 
   # install license
-  install -Dm644 $srcdir/$pkgname-$pkgver/COPYING \
-    $pkgdir/usr/share/licenses/$pkgname/LICENSE || return 1
+  install -Dm644 COPYING ${pkgdir}/usr/share/licenses/${pkgname}/LICENSE
 }
