--- a/libnl/trunk/PKGBUILD
+++ b/libnl/trunk/PKGBUILD
@@ -3,26 +3,24 @@
 # Contributor: William Rea <sillywilly@gmail.com>
 
 pkgname=libnl
-pkgver=1.1
-pkgrel=2
+pkgver=2.0
+pkgrel=1
 pkgdesc="Library for applications dealing with netlink sockets"
 arch=('i686' 'x86_64')
 url="http://www.infradead.org/~tgr/libnl/"
 license=('GPL')
 depends=('glibc')
-source=(ftp://ftp.archlinux.org/other/libnl/${pkgname}-${pkgver}.tar.gz
-        fix-compilation.patch)
-md5sums=('ae970ccd9144e132b68664f98e7ceeb1'
-         'e1f5e82c8aa1b3ad025c7b588178de1e')
+source=(http://www.infradead.org/~tgr/libnl/files/${pkgname}-${pkgver}.tar.gz)
+sha256sums=('5a40dc903d3ca1074da7424b908bec8ff16936484798c7e46e53e9db8bc87a9c')
+options=(!makeflags !libtool)
 
 build() {
-  cd ${srcdir}/libnl-${pkgver}
-  patch -Np1 -i ${srcdir}/fix-compilation.patch || return 1
-  ./configure --prefix=/usr || return 1
-  make || return 1
+  cd "${srcdir}"/${pkgname}-${pkgver}
+  ./configure --prefix=/usr --sysconfdir=/etc
+  make
 }
 
 package() {
-  cd ${srcdir}/libnl-${pkgver}
-  make DESTDIR=${pkgdir} install || return 1
+  cd "${srcdir}"/${pkgname}-${pkgver}
+  make DESTDIR="${pkgdir}" install
 }
