--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,25 +2,24 @@
 # Maintainer: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=libmpdclient
-pkgver=2.3
+pkgver=2.4
 pkgrel=1
-pkgdesc="An asynchronous API library for interfacing MPD in the C, C++ & Objective C languages"
+pkgdesc='An asynchronous API library for interfacing MPD in the C, C++ & Objective C languages'
 arch=('i686' 'x86_64')
-url="http://mpd.wikia.com/wiki/ClientLib:libmpdclient"
+url='http://mpd.wikia.com/wiki/ClientLib:libmpdclient'
 license=('GPL2')
 depends=('glibc')
 options=('!libtool')
 source=("http://downloads.sourceforge.net/musicpd/${pkgname}-${pkgver}.tar.bz2")
-sha1sums=('d1ccd40f1c7a723ef0a8eb0e19b51699ec9a8f9e')
+sha1sums=('fe240e56eb5cae082ea4894a810c1fdadc3d03a1')
 
 build() {
-  cd "${srcdir}/${pkgname}-${pkgver}"
-
-  ./configure --prefix=/usr
-  make
+	cd "${srcdir}/${pkgname}-${pkgver}"
+	./configure --prefix=/usr
+	make
 }
 
 package() {
-  cd "${srcdir}/${pkgname}-${pkgver}"
-  make DESTDIR="${pkgdir}" install
+	cd "${srcdir}/${pkgname}-${pkgver}"
+	make DESTDIR="${pkgdir}" install
 }
