--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,19 +4,19 @@
 # Contributor: Paul Mattal <paul@archlinux.org>
 
 pkgname=ffmpeg
-pkgver=25679
+pkgver=26387
 pkgrel=1
 pkgdesc="Complete and free Internet live audio and video broadcasting solution for Linux/Unix"
 arch=('i686' 'x86_64')
 url="http://ffmpeg.org/"
 license=('GPL')
-depends=('bzip2' 'lame' 'sdl' 'libvorbis' 'faac' 'xvidcore' 'zlib' 'x264' 'libtheora' 'opencore-amr' 'alsa-lib' 'libvdpau' 'libxfixes' 'schroedinger' 'libvpx' 'libva>=1.0.4' 'openjpeg')
+depends=('bzip2' 'lame' 'sdl' 'libvorbis' 'faac' 'xvidcore' 'zlib' 'x264' 'libtheora' 'opencore-amr' 'alsa-lib' 'libvdpau' 'libxfixes' 'schroedinger' 'libvpx' 'libva' 'openjpeg')
 makedepends=('yasm')
 #remake snapshot with: svn export svn://svn.ffmpeg.org/ffmpeg/trunk/@25472
 source=(ftp://ftp.archlinux.org/other/ffmpeg/ffmpeg-${pkgver}.tar.xz)
 options=('force')
 #source=(http://ffmpeg.org/releases//releases/ffmpeg-${pkgver}.tar.bz2)
-md5sums=('9fdc03624ffd744fb25964e2f8dcd09d')
+md5sums=('02be9ac7cd09ca20d928740357c3f488')
 
 build() {
   cd "$srcdir/$pkgname"
