--- a/tumbler/trunk/PKGBUILD
+++ b/tumbler/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Jan Jezek <honzin.jezek@gmail.com>
 
 pkgname=tumbler
-pkgver=0.1.5
+pkgver=0.1.6
 pkgrel=1
 pkgdesc="D-Bus service for applications to request thumbnails"
 url="http://git.xfce.org/apps/tumbler/"
@@ -16,13 +16,14 @@ depends=('poppler-glib' 'dbus-glib' 'ffmpegthumbnailer')
 makedepends=( 'intltool' 'gtk-doc') # 'tumbler') # \ - broken, needs tumbler to build itself
 options=('!libtool')
 source=(http://archive.xfce.org/src/apps/${pkgname}/0.1/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('e3b9096bcadd4ab5cadb87007df95773')
+md5sums=('ce273623d83aac927d5c2dabbb7993cb')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
   ./configure --prefix=/usr \
 	--sysconfdir=/etc \
 	--libexecdir=/usr/lib/xfce4 \
+	--disable-static \
 	--disable-debug \
 #	--enable-gtk-doc # \ - broken, needs tumbler to build itself
 	
