--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,20 +3,20 @@
 # Contributor: Xavier Devlamynck <magicrhesus@ouranos.be>
 
 pkgname=libxfce4ui
-pkgver=4.7.6
-pkgrel=2
+pkgver=4.8.0
+pkgrel=1
 pkgdesc="share commonly used Xfce widgets among the Xfce applications"
 arch=('i686' 'x86_64')
 license=('GPL2')
 url="http://www.xfce.org/"
 groups=('xfce4')
-depends=('libxfce4util>=4.7.3' 'gtk2' "xfconf>=4.7.3" 'startup-notification') 
+depends=('libxfce4util>=4.8.0' 'gtk2' "xfconf>=4.8.0" 'startup-notification') 
 makedepends=('intltool' 'gtk-doc' 'glade')
 optdepends=('glade: for using the included glade module')
-#replaces=('libxfcegui4')
+#replaces=('libxfcegui4') - later when all is ported
 options=('!libtool')
-source=(http://archive.xfce.org/src/xfce/libxfce4ui/4.7/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('beccb7eb6fb36bec38b5d140ed42480e')
+source=(http://archive.xfce.org/src/xfce/libxfce4ui/4.8/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('df9acb3328dff905bd0777b84532b69f')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
