--- a/xfce-utils/trunk/PKGBUILD
+++ b/xfce-utils/trunk/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: tobias <tobias funnychar archlinux.org>
 
 pkgname=xfce-utils
-pkgver=4.7.4
-pkgrel=2
+pkgver=4.8.0
+pkgrel=1
 pkgdesc="Utilities for Xfce"
 arch=(i686 x86_64)
 license=('GPL2')
@@ -18,8 +18,8 @@ optdepends=('perl:	for migration scripts'
 	    'xlockmore: for locking screen with xflock4')
 options=('!libtool')
 install=${pkgname}.install
-source=(http://archive.xfce.org/src/xfce/${pkgname}/4.7/${pkgname}-${pkgver}.tar.bz2)
-md5sums=(2f57594fd504a1a013d0ca5dea898d58'')
+source=(http://archive.xfce.org/src/xfce/${pkgname}/4.8/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('c49af3e718048d70b3fdd45fd4a8d281')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
