--- a/xfwm4/trunk/PKGBUILD
+++ b/xfwm4/trunk/PKGBUILD
@@ -3,9 +3,9 @@
 # Contributor: tobias <tobias funnychar archlinux.org>
 
 pkgname=xfwm4
-pkgver=4.7.4
+pkgver=4.8.0
 pkgrel=1
-pkgdesc="Xfce window manager, compatible with Gnome, Gnome2, KDE2, and KDE3"
+pkgdesc="Xfce window manager"
 arch=('i686' 'x86_64')
 license=('GPL2')
 url="http://www.xfce.org/"
@@ -14,8 +14,8 @@ depends=("libxfce4ui" 'libwnck' 'hicolor-icon-theme')
 makedepends=('pkgconfig' 'intltool')
 options=('!libtool')
 install=${pkgname}.install
-source=(http://archive.xfce.org/src/xfce/${pkgname}/4.7/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('206fc123ee2010860e206fe0baa87f40')
+source=(http://archive.xfce.org/src/xfce/${pkgname}/4.8/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('e0a6ac8a8997d5bf9d5b8a202e03f84b')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
