--- a/scummvm/trunk/PKGBUILD
+++ b/scummvm/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Manolis Tzanidakis, Petter Gundersen
 
 pkgname=scummvm
-pkgver=1.2.0
+pkgver=1.2.1
 pkgrel=1
 pkgdesc="A 'virtual machine' for several classic graphical point-and-click adventure games."
 arch=('i686' 'x86_64')
@@ -11,7 +11,7 @@ license=('GPL')
 url="http://www.scummvm.org/"
 depends=('gcc-libs' 'alsa-lib' 'libmad' 'libvorbis' 'zlib' 'flac>=1.1.4' 'sdl' 'fluidsynth')
 source=(http://downloads.sourceforge.net/sourceforge/${pkgname}/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('fae9a3dbd4d2892664a8bcb161eb8d9a')
+md5sums=('b1d224d7640bc7fdccaca958164b31df')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
@@ -21,6 +21,10 @@ build() {
     --with-fluidsynth-prefix=/usr \
     --prefix=/usr
   make
+}
+
+package() {
+  cd ${srcdir}/${pkgname}-${pkgver}
   install -Dm755 scummvm ${pkgdir}/usr/bin/scummvm
   install -Dm644 dists/scummvm.6 ${pkgdir}/usr/share/man/man6/scummvm.6
   # fixes FS#9118 
@@ -30,4 +34,5 @@ build() {
 	${pkgdir}/usr/share/pixmaps/scummvm.xpm
 
   install -Dm644 gui/themes/scummmodern.zip ${pkgdir}/usr/share/scummvm/scummmodern.zip
+
 }
