--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: John Proctor <jproctor@prium.net>
 
 pkgname=pcre
-pkgver=8.11
+pkgver=8.12
 pkgrel=1
 pkgdesc="A library that implements Perl 5-style regular expressions"
 arch=('i686' 'x86_64')
@@ -13,8 +13,8 @@ license=('BSD')
 depends=('gcc-libs')
 options=('!libtool')
 source=(ftp://ftp.csx.cam.ac.uk/pub/software/programming/pcre/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('ef907b8792ec7f90f0dcd773848f0b3b')
-sha1sums=('e9a9c2b2dfcf8606ad5c1fb5591801fa2cb771f5')
+md5sums=('f14a9fef3c92f3fc6c5ac92d7a2c7eb3')
+sha1sums=('2219b372bff53ee29a7e44ecf5977ad15df01cea')
 
 build() {
   cd "${srcdir}"/${pkgname}-${pkgver}
@@ -30,7 +30,7 @@ package() {
   # grep uses pcre, so we need the libs in /lib
   install -dm755 "${pkgdir}"/lib
   mv "${pkgdir}"/usr/lib/libpcre.so.* "${pkgdir}"/lib/
-  ln -sf ../../lib/libpcre.so.0 "${pkgdir}"/usr/lib/libpcre.so
+  ln -sf /lib/libpcre.so.0 "${pkgdir}"/usr/lib/libpcre.so
 
   install -Dm644 LICENCE "${pkgdir}"/usr/share/licenses/${pkgname}/LICENSE
 }
