--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Michael Kanis <mkanis@gmx.de>
 
 pkgname=libchamplain
-pkgver=0.8.0
+pkgver=0.8.1
 pkgrel=1
 pkgdesc="C library aimed to provide a Gtk+ widget to display rasterized maps"
 url="http://projects.gnome.org/libchamplain/"
@@ -14,7 +14,7 @@ options=('!libtool')
 depends=('clutter-gtk>=0.10.8' 'libsoup' 'cairo>=1.8' 'sqlite3')
 makedepends=('gobject-introspection')
 source=(http://ftp.gnome.org/pub/GNOME/sources/$pkgname/0.8/${pkgname}-${pkgver}.tar.bz2)
-sha256sums=('0784b53f488d690ed878b1bbf30cd9bd9b1baafb5b6b0d0b7b2ba0ef240c49cc')
+md5sums=('4490dca0c099cac47ed93796d5bd79fd')
 
 build() {
     cd ${srcdir}/${pkgname}-${pkgver}
