--- a/koffice-l10n/trunk/PKGBUILD
+++ b/koffice-l10n/trunk/PKGBUILD
@@ -18,6 +18,7 @@ pkgname=('koffice-l10n-ca'
 	 'koffice-l10n-nb'
 	 'koffice-l10n-nds'
 	 'koffice-l10n-nl'
+	 'koffice-l10n-pl'
 	 'koffice-l10n-pt'
 	 'koffice-l10n-pt_br'
 	 'koffice-l10n-sv'
@@ -25,7 +26,7 @@ pkgname=('koffice-l10n-ca'
 	 'koffice-l10n-uk'
 	 'koffice-l10n-zh_cn'
 	 'koffice-l10n-zh_tw')
-pkgver=2.3.0
+pkgver=2.3.1
 pkgrel=1
 arch=('any')
 url='http://www.koffice.org'
@@ -49,6 +50,7 @@ source=("http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase
 	"http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase}-nb-${pkgver}.tar.bz2"
 	"http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase}-nds-${pkgver}.tar.bz2"
 	"http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase}-nl-${pkgver}.tar.bz2"
+	"http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase}-pl-${pkgver}.tar.bz2"
 	"http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase}-pt-${pkgver}.tar.bz2"
 	"http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase}-pt_BR-${pkgver}.tar.bz2"
 	"http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase}-sv-${pkgver}.tar.bz2"
@@ -56,29 +58,30 @@ source=("http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase
 	"http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase}-uk-${pkgver}.tar.bz2"
 	"http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase}-zh_CN-${pkgver}.tar.bz2"
 	"http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase}-zh_TW-${pkgver}.tar.bz2")
-sha1sums=('94f86fd3ceaeb6aa0eb9067cea0fb3f0b6c98bf5'
-          '102afb2794762cafaec1bafdf2ee577e5d27336e'
-          '88caa67026e633c48444433d5dab3ad029bec33c'
-          '5bcd7e1e35fe8055d1ffbe06f3668c46df26e49d'
-          'a01562baef11018dfeab98e08136adb0d074acc2'
-          'cb3217e9714d88aa2e540986ddb2d4bcca39fa3f'
-          'c744ef4083f44ee8eaac8e7c8ac772ea53bf2178'
-          '0517a18c3a9e425de3ee7edf1346eac61ccf9c52'
-          '4153d11717aaee1a836563b0abbd4ec340aa095d'
-          '08d5081481c17741d8acdaab1b49225cd55cce69'
-          'f49480d5b06b5a120f7d7e28e0c9346231d287b1'
-          '2b37f70ecd75e1a3477792f55d6c504edbe05325'
-          '37a87a5aa07e5e2149aef43d0cef3315f8e8a346'
-          '84bbfcfbb6a7b16f8d790eac0e98d4127b15c0e7'
-          '2f20d36404d5b6a227a59b97897d42119462d977'
-          '6ab3f0417b8f6c2befa1719b42daf09cfd2ffc06'
-          'a6eefb0e2ef62ed266005721a131d9f22275bd32'
-          'c1306a91542954d84462b82f03b856f2a9029915'
-          '2f468a5e40442eb23264858c3c75ae8ef81bcfab'
-          '41f6a0ccd56b32c615b5c9f991b0e21924cee4dd'
-          '71566ed292e64ebf048431b0b1345cf3c0e0e73b'
-          'c41e0162d9da166dd9402259f69bbc63626a9e57'
-          '57635c7fc2b88da0983d94c0da4976dcac485030')
+sha1sums=('360cf46412b4324f3fdd60f6757a92aae8c81208'
+          '8fb57d39e4206e2300c48409cee5593ebbc11967'
+          '6ff970dfd555fed8ba6b6b091f321dc5a1252252'
+          '7416990c386e4d74985944774374e32a94638eff'
+          '0b18ba50756a2eb35b9997c82b293013c883483e'
+          '8b1cef651e31f9988ddba0f15747fd4c097a92eb'
+          '771a367883769514252f5c34c82f76a224669074'
+          'f778167722d9d7a72adede3920fa67d13e662db2'
+          '275eccec608dd1f6a38c91792f038e354a3150ac'
+          '387927410d6681d4b252c5054592d33f2db233f0'
+          '19ed8834799b5e2a1d33a09e8c77fe1ca83cf0c6'
+          '925f1eed44ec110d97a688db6e330a4e0b354d68'
+          '8cbf6cde9ef30c8b2150d1d92cec3fb496e9d7fa'
+          '7e050e9c0526019db9ba0e9322f370c33ef4851b'
+          '767de5fc23f48cfe0e7199b925bc919faee1855a'
+          'a74c290fe99c359b4c1fef0abc5b08dfc5b8fdf8'
+          '3815d7a80676ba91e224cc4d27cab9107410c913'
+          '0d23cec4f8ffeeefc6616ff08fbc229bc3425cce'
+          '42e1e1941f15b29351198ab80ed1c7e2f75b7b11'
+          '4febdca21875a4d3eb7bbb5e1c9a1b5a70d72753'
+          '1d709bc0e816a59f0ed3c0d822ed0bc3ea9f11b1'
+          '14a0623317425d3afd9d678941b7916abb51e535'
+          'a025a269b6545c50c90f78402f609c914b97d5be'
+          'aa0c2e36a7766a2814bf8a3a37c7591e48239629')
 
 build() {
   cd $srcdir
@@ -88,7 +91,7 @@ build() {
   cmake ${srcdir}/koffice-l10n-ca-${pkgver} \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr
-  make || return 1
+  make 
   cd ../..
 
   install -d build/ca@valencia
@@ -96,7 +99,7 @@ build() {
   cmake ${srcdir}/koffice-l10n-ca@valencia-${pkgver} \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr
-  make || return 1
+  make 
   cd ../..
 
   install -d build/da
@@ -104,7 +107,7 @@ build() {
   cmake ${srcdir}/koffice-l10n-da-${pkgver} \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr
-  make || return 1
+  make 
   cd ../..
 
   install -d build/de
@@ -112,7 +115,7 @@ build() {
   cmake ${srcdir}/koffice-l10n-de-${pkgver} \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr
-  make || return 1
+  make 
   cd ../..
 
   install -d build/el
@@ -120,7 +123,7 @@ build() {
   cmake ${srcdir}/koffice-l10n-el-${pkgver} \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr
-  make || return 1
+  make 
   cd ../..
 
   install -d build/en_GB
@@ -128,7 +131,7 @@ build() {
   cmake ${srcdir}/koffice-l10n-en_GB-${pkgver} \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr
-  make || return 1
+  make 
   cd ../..
 
   install -d build/es
@@ -136,7 +139,7 @@ build() {
   cmake ${srcdir}/koffice-l10n-es-${pkgver} \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr
-  make || return 1
+  make 
   cd ../..
 
   install -d build/et
@@ -144,7 +147,7 @@ build() {
   cmake ${srcdir}/koffice-l10n-et-${pkgver} \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr
-  make || return 1
+  make 
   cd ../..
 
   install -d build/fr
@@ -152,7 +155,7 @@ build() {
   cmake ${srcdir}/koffice-l10n-fr-${pkgver} \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr
-  make || return 1
+  make 
   cd ../..
 
   install -d build/gl
@@ -160,7 +163,7 @@ build() {
   cmake ${srcdir}/koffice-l10n-gl-${pkgver} \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr
-  make || return 1
+  make 
   cd ../..
 
   install -d build/it
@@ -168,7 +171,7 @@ build() {
   cmake ${srcdir}/koffice-l10n-it-${pkgver} \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr
-  make || return 1
+  make 
   cd ../..
 
   install -d build/ja
@@ -176,7 +179,7 @@ build() {
   cmake ${srcdir}/koffice-l10n-ja-${pkgver} \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr
-  make || return 1
+  make 
   cd ../..
 
   install -d build/kk
@@ -184,7 +187,7 @@ build() {
   cmake ${srcdir}/koffice-l10n-kk-${pkgver} \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr
-  make || return 1
+  make 
   cd ../..
 
   install -d build/nb
@@ -192,7 +195,7 @@ build() {
   cmake ${srcdir}/koffice-l10n-nb-${pkgver} \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr
-  make || return 1
+  make 
   cd ../..
 
   install -d build/nds
@@ -200,7 +203,7 @@ build() {
   cmake ${srcdir}/koffice-l10n-nds-${pkgver} \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr
-  make || return 1
+  make 
   cd ../..
 
   install -d build/nl
@@ -208,7 +211,15 @@ build() {
   cmake ${srcdir}/koffice-l10n-nl-${pkgver} \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr
-  make || return 1
+  make 
+  cd ../..
+
+  install -d build/pl
+  cd build/pl
+  cmake ${srcdir}/koffice-l10n-pl-${pkgver} \
+    -DCMAKE_BUILD_TYPE=Release \
+    -DCMAKE_INSTALL_PREFIX=/usr
+  make 
   cd ../..
 
   install -d build/pt
@@ -216,7 +227,7 @@ build() {
   cmake ${srcdir}/koffice-l10n-pt-${pkgver} \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr
-  make || return 1
+  make 
   cd ../..
 
   install -d build/pt_BR
@@ -224,7 +235,7 @@ build() {
   cmake ${srcdir}/koffice-l10n-pt_BR-${pkgver} \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr
-  make || return 1
+  make 
   cd ../..
 
   install -d build/sv
@@ -232,7 +243,7 @@ build() {
   cmake ${srcdir}/koffice-l10n-sv-${pkgver} \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr
-  make || return 1
+  make 
   cd ../..
 
   install -d build/tr
@@ -240,7 +251,7 @@ build() {
   cmake ${srcdir}/koffice-l10n-tr-${pkgver} \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr
-  make || return 1
+  make 
   cd ../..
 
   install -d build/uk
@@ -248,7 +259,7 @@ build() {
   cmake ${srcdir}/koffice-l10n-uk-${pkgver} \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr
-  make || return 1
+  make 
   cd ../..
 
   install -d build/zh_CN
@@ -256,7 +267,7 @@ build() {
   cmake ${srcdir}/koffice-l10n-zh_CN-${pkgver} \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr
-  make || return 1
+  make 
   cd ../..
 
   install -d build/zh_TW
@@ -264,7 +275,7 @@ build() {
   cmake ${srcdir}/koffice-l10n-zh_TW-${pkgver} \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr
-  make || return 1
+  make 
   cd ../..
 
 }
@@ -349,6 +360,11 @@ package_koffice-l10n-nds() {
 package_koffice-l10n-nl() {
         pkgdesc=('Dutch Localization for Koffice')
         cd $srcdir/build/nl
+        make DESTDIR=$pkgdir install
+}
+package_koffice-l10n-pl() {
+        pkgdesc=('Polish Localization for Koffice')
+        cd $srcdir/build/pl
         make DESTDIR=$pkgdir install
 }
 package_koffice-l10n-pt() {
