--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Jan de Groot <jgc@archlinux.org>
 
 pkgname=dmidecode
-pkgver=2.10
+pkgver=2.11
 pkgrel=1
 pkgdesc="Desktop Management Interface table related utilities"
 arch=('i686' 'x86_64')
@@ -11,10 +11,11 @@ url="http://www.nongnu.org/dmidecode"
 license=('GPL')
 depends=('glibc')
 source=(http://download.savannah.nongnu.org/releases/${pkgname}/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('3c9c4d55a40b78600f3b43bfa64616f9')
+md5sums=('535487cc041f2db746587cf40a2059f0')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
+
   make prefix=/usr || return 1
-  make prefix=/usr DESTDIR=${startdir}/pkg install
+  make prefix=/usr DESTDIR=${pkgdir} install || return 1
 }
