--- a/python2-sip/trunk/PKGBUILD
+++ b/python2-sip/trunk/PKGBUILD
@@ -5,26 +5,26 @@
 
 pkgname=python2-sip
 pkgver=4.12
-pkgrel=2
+pkgrel=4
 pkgdesc="A tool that makes it easy to create Python 2 bindings for C and C++ libraries"
 arch=('i686' 'x86_64')
 url="http://www.riverbankcomputing.com/software/sip/"
 license=('custom:"sip"')
-depends=('sip' 'python2')
+depends=('python2')
+replaces=('sip')
 source=("http://www.riverbankcomputing.com/static/Downloads/sip4/sip-${pkgver}.tar.gz")
 md5sums=('8a0998fbaf34bdab2c15af3d4fa3bc0e')
 
 build() {
-  cd ${srcdir}/sip-${pkgver}
+  cd "${srcdir}/sip-${pkgver}"
 
   python2 configure.py CFLAGS="${CFLAGS}" LFLAGS="${LDFLAGS}"
   make
 }
 
 package() {
-  cd ${srcdir}/sip-${pkgver}
-  make DESTDIR=${pkgdir} install
+  cd "${srcdir}/sip-${pkgver}"
+  make DESTDIR="${pkgdir}" install
 
-  # Provided by sip package
-  rm ${pkgdir}/usr/bin/sip
+  install -Dm644 LICENSE "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 }
