--- a/valgrind/trunk/PKGBUILD
+++ b/valgrind/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=valgrind
 pkgver=3.6.0
-pkgrel=2
+pkgrel=3
 pkgdesc="A tool to help find memory-management problems in programs"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -14,10 +14,12 @@ makedepends=('gdb')
 options=('!emptydirs')
 source=(http://valgrind.org/downloads/${pkgname}-${pkgver}.tar.bz2
         glibc-patch-version.patch
-       	glibc-2.13.patch)    
+       	glibc-2.13.patch
+       	glibc-2.13-strcasecmp.patch)    
 md5sums=('b289c5f4ab8e39741602445f1dd09b34'
          'b657f0ebdde3d9aefc9fd16f9e653702'
-         '3706469d3b712f420e161a5ba1143d02')
+         '3706469d3b712f420e161a5ba1143d02'
+         'd593be202296116653c792556ab6db73')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
@@ -30,6 +32,9 @@ build() {
 
   # glibc-2.13 "compatibility"
   patch -Np1 -i ${srcdir}/glibc-2.13.patch
+
+  # http://bugs.kde.org/show_bug.cgi?id=256600
+  patch -Np0 -i ${srcdir}/glibc-2.13-strcasecmp.patch
 
   if [ "${CARCH}" = "x86_64" ]; then
     ./configure --prefix=/usr --mandir=/usr/share/man --enable-only64bit
